--- a/ec1d7043b9929689281cc2516f2f7000/riddler-2016-08-19.md
+++ b/ec1d7043b9929689281cc2516f2f7000/riddler-2016-08-19.md
@@ -79,3 +79,8 @@ $$
 This suggests that we can define the problem for starting points outside of the paddock,
 and that the velocity is symmetric about the point $(1,1)$, i.e. $v(a,b) = v(2-a,2-b)$.
 
+It also indicates that the following times are the same:
+
+1. The time it takes the farmer to run to $(1,1)$ and back to his original position.
+2. The time it takes the ram to run to the farmer's starting position and then to $(2,2)$.
+
